--- a/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
+++ b/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.html
@@ -1,6 +1,7 @@
 <div class="row ema-document-header">
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ema-med-name">{{title}}</div>
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ema-med-actions">
+        <ema-button *ngIf="showButton" [label]="buttonLabel" (buttonClicked)='actionButtonClick()'></ema-button>
         <ul>
             <li *ngIf = "showShareFeature" class="ema-med-share">
                 <span class="ema-med-share-icon">
