No data message change

--- a/portal/src/app/pages/search-page/search-page.component.html
+++ b/portal/src/app/pages/search-page/search-page.component.html
@@ -34,7 +34,9 @@
                         </li>
                     </ul>
                     <div *ngIf="!(medicineList?.length > 0)" class="ema-search-notFound">
-                        <p>Go ahead. Search for a medicine. Don't be shy....</p>
+                        <p>Go ahead. Search for a medicine. Don't be shy....
+                        </p>
+                        <p>You can search for all medicines using *</p>
                     </div>
                 </div>
 
