--- a/portal/projects/ema-component-library/src/lib/atoms/button/button.component.scss
+++ b/portal/projects/ema-component-library/src/lib/atoms/button/button.component.scss
@@ -12,9 +12,12 @@
         font-weight: normal;
         font-size: 16px;
         line-height: 16px;
+        opacity: 1;
+        
 
         &:hover {
             cursor: pointer !important;
+            opacity: 0.9;
         }
     }
 }
