--- a/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.scss
+++ b/portal/projects/ema-component-library/src/lib/layouts/document-header/document-header.component.scss
@@ -26,8 +26,8 @@
             color: $ema-text-focused;
             padding-left: 0px;
             @media (max-width: 576px) {
-                & {
-                   margin-bottom:16px;
+                &.mb-8{
+                    margin-bottom:16px;
                 }
             }
         }
