--- a/portal/projects/ema-component-library/src/lib/molecules/action-links/action-links.component.scss
+++ b/portal/projects/ema-component-library/src/lib/molecules/action-links/action-links.component.scss
@@ -19,6 +19,7 @@
             color: $ema-text-focused;
             padding: 24px 40px !important;
             text-decoration: none;
+            height:100%;
             &-active {
                 color: $ema-text-focused;
                 border-bottom: 4px solid $ema-primary;
