--- a/portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.html
+++ b/portal/projects/ema-component-library/src/lib/molecules/tree/tree.component.html
@@ -1,11 +1,11 @@
 <ul class="ema-tree">
     <li *ngFor="let node of treeData">
-        <a class="ema-tree-node" [routerLink]="['.']" [fragment]="node.id?.value" [replaceUrl]="true">
+        <a class="ema-tree-node" [routerLink]="['./']" [fragment]="node.id" [replaceUrl]="true" >
             <span class="ema-tree-toggle " (click)="toggleChild(node, $event)">
                 <span class="ema-arrow">
                     <ema-arrow *ngIf="node.section?.length > 0"></ema-arrow>
                 </span>
-            </span> <span (click)="scrollToAnchor(node.id?.value)">{{ node.title }}</span> </a>
+            </span> <span (click)="scrollToAnchor(node.id)">{{ node.title }}</span> </a>
         <ema-tree *ngIf="node.showChildren" [treeData]="node.section"></ema-tree>
     </li>
 </ul>
