--- a/portal/projects/ema-component-library/src/lib/molecules/textbox-multi-select/textbox-multi-select.component.scss
+++ b/portal/projects/ema-component-library/src/lib/molecules/textbox-multi-select/textbox-multi-select.component.scss
@@ -5,7 +5,7 @@
         align-items: center;
         padding: 0px;
         background-color: $ema-multiselect-background;
-        border: 1px solid $ema-tag-background;
+        border: 1px solid $ema-border;
         border-radius: 5px;
         flex-wrap: wrap;
         &:hover {
@@ -20,8 +20,8 @@
         }
         .ema-textbox {
             display: inline-block;
-            min-width: 300px;
             max-width: calc(100% - 16px);
+            width:100%;
             &-input {
                 border: none;
                 background-color: $ema-multiselect-background;
@@ -29,6 +29,7 @@
                 padding: 16px 8px;
                 line-height: 16px;
                 min-height: 58px;
+                width: 100%;
 
                 &:focus {
                     border: none;
@@ -39,11 +40,11 @@
                 }
                 @media (max-width: 300px) {
                     & {
-                        width: 80px;
+                        width: 100%;
                     }
                 }
             }
-            @media (min-width:301px) and (max-width: 576px) {
+            @media (min-width: 301px) and (max-width: 576px) {
                 & {
                     min-width: 100px;
                     max-width: calc(100% - 16px);
@@ -51,9 +52,30 @@
             }
             @media (max-width: 300px) {
                 & {
-                    width: 80px;
+                    width: 80%;
                     max-width: calc(100% - 16px);
                 }
+            }
+        }
+
+        &--small {
+            .ema-tags-list {
+                ema-tags {
+                    margin: 8px 8px;
+                }
+            }
+
+            .ema-textbox {
+                &-input {
+                    padding: 0px;
+                    min-height:42px;
+                }
+            }
+        }
+        &--single{
+            cursor: default;
+            &:hover{
+                cursor: default !important;
             }
         }
     }
