--- a/portal/projects/ema-component-library/src/lib/atoms/button/button.component.html
+++ b/portal/projects/ema-component-library/src/lib/atoms/button/button.component.html
@@ -1,3 +1,3 @@
-<div class="ema-button" (click)='onButtonClick()'>
+<div class="ema-button" [ngClass]="{'ema-button--secondary': isSecondary, 'ema-button--disabled': isDisabled}" (click)='onButtonClick()'>
     {{label}}
 </div>
