--- a/portal/projects/ema-component-library/src/lib/ema-design-system.scss
+++ b/portal/projects/ema-component-library/src/lib/ema-design-system.scss
@@ -1,3 +1,4 @@
+// Import common scss files in this file
 @import "~bootstrap/dist/css/bootstrap.css";
 @import './ema-theme-variables.scss';
 @import './scss/modal.scss';
